      re-escape curly braces in LaTeX-like text.
      (Reported by Hadley Wickham in \PR{18324}.)

      \item \code{library()} now passes its \code{lib.loc} argument when
      requiring \code{Depends} packages; reported (with fix) in \PR{18331}
      by Mikael Jagan.

      \item \code{R CMD Stangle}: improved message about \sQuote{Output}
      files.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.2.0 patched}{
  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item The libraries searched for by \option{--with-blas} (without
      a value) now include BLIS (after OpenBLAS but before ATLAS).  And
      on macOS, the Accelerate framework (after ATLAS).

      \item The included LAPACK sources have been updated to 3.10.1.
    }
  }
  \subsection{UTILITIES}{
    \itemize{
      \item The (full path to) the command \command{tidy} to be used for
      HTML validation can be set by environment variable \env{R_TIDYCMD}.

      \item Setting environment variable
      \env{_R_CHECK_RD_VALIDATE_RD2HTML_} to a false value will override
      \command{R CMD check --as-cran} and turn off HTML validation.
      This provides a way to circumvent a problematic \command{tidy}.

      The 2006 version that ships with macOS is always skipped.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Writing to a clipboard connection on Windows works again, fixing
      a regression in \R 4.2.0 (\PR{18332}).  Re-using a closed clipboard
      connection on Windows no longer issues a spurious warning about an
      ignored encoding argument.

      \item \code{getlocale} on Windows no longer attempts to query an
      unsupported category from the OS, even when requested at R level,
      which may cause crashes when \R 4.2.0 (which uses UCRT) is
      embedded (reported by Kevin Ushey).

      \item Accent keys now work in GraphApp Unicode windows, which are used
      by Rgui whenever running in a multibyte locale (so also in UTF-8,